--- a/MarathonWebApiCore/appsettings.json
+++ b/MarathonWebApiCore/appsettings.json
@@ -20,6 +20,6 @@
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
     "Username": "ujaspatelgroup@gmail.com",
-    "Password": "989865@Ila"
+    "Password": "your password"
   }
 }
